intial retrieval scripts
Twitter retrieves last 100 tweets. Twitter todo need to change to all timeline tweets.  Cryptocompare retrieves 2100 records max. Need to do CC in batches

--- a/retrieve/cryptocompare/RETRIEVE1_HISTORICAL_ALLCOIN_HOURLY_DATA_CRYPTO_COMPARE_API_v1.ipynb
+++ b/retrieve/cryptocompare/RETRIEVE1_HISTORICAL_ALLCOIN_HOURLY_DATA_CRYPTO_COMPARE_API_v1.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key = os.environ.get(\"CC_API_KEY\")\n"
+    "api_key = os.environ.get(\"CRYPTOCOMPARE_API_KEY\")    \n"
    ]
   },
   {
