--- a/retrieve/twitter/CRYPTO_TWITTER_TRIAL_v1.ipynb
+++ b/retrieve/twitter/CRYPTO_TWITTER_TRIAL_v1.ipynb
@@ -67,7 +67,7 @@
     "import pandas as pd\n",
     "import pickle\n",
     "\n",
-    "dotenv.load_dotenv()"
+    "dotenv.load_dotenv()     "
    ]
   },
   {
@@ -527,9 +527,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "twitenv",
+   "display_name": "mlenv",
    "language": "python",
-   "name": "twitenv"
+   "name": "mlenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -541,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
