--- a/retrieve/twitter/CRYPTO_TWITTER_TRIAL_v1.ipynb
+++ b/retrieve/twitter/CRYPTO_TWITTER_TRIAL_v1.ipynb
@@ -11931,7 +11931,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:root] *",
+   "display_name": "Python [conda env:root]",
    "language": "python",
    "name": "conda-root-py"
   },
@@ -11945,7 +11945,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
